fixed the bug in barchart component

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "chart.js": "^4.2.0",
     "next": "13.1.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1"
   },
