--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.2",
     "chart.js": "^4.2.0",
+    "daisyui": "^2.47.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
