fixed the mobile view and added drawer component

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-modern-drawer": "^1.2.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
